--- a/SchoolApp/SchoolApp/Views/Registration.xaml
+++ b/SchoolApp/SchoolApp/Views/Registration.xaml
@@ -3,10 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="SchoolApp.Views.MainPage"
-             xmlns:local="clr-namespace:SchoolApp.Views"
-             Title="MainPage">
-  <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-        <Label Text="MainPage" TextColor="DarkGreen"/>
+             x:Class="SchoolApp.Views.Registration"
+             Title=" Registration for new Students"
+             >
+    <StackLayout>
+        <Label Text="Registration Page"/>
     </StackLayout>
 </ContentPage>
