Added login feature to the sample school app. Added basic navigation with new appnavigtion

--- a/SchoolApp/SchoolApp/Views/LoginPage.xaml
+++ b/SchoolApp/SchoolApp/Views/LoginPage.xaml
@@ -21,9 +21,9 @@
                 FontSize="Medium" 
                 FontAttributes="Bold"
                 BackgroundColor="DarkBlue"
-                BorderRadius="3"/>
-                <!--Command="{Binding LoginCommand}"-->
-        
+                BorderRadius="3"
+                Command="{Binding LoginCommand}"
+        />
     </StackLayout>
   
 </ContentPage>
